# da623-convolution-1d

./: README.md  notebook.ipynb  pyproject.toml
