[tool.poetry]
name = "da623-convolution-1d"
version = "0.1.0"
description = ""
authors = ["vishalb <vi.bulchandani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scipy = "^1.13.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
ipython = "^8.24.0"
plotly = "^5.22.0"
matplotlib = "^3.8.4"
ipywidgets = "^8.1.2"
streamlit = "^1.33.0"
ipympl = "^0.9.4"
tabulate = "^0.9.0"
keras = "^3.3.3"
librosa = "^0.10.2"
torch = {version = "^2.3.0+cpu", source = "pytorch_cpu"}
torchaudio = {version = "^2.3.0+cpu", source = "pytorch_cpu"}


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
